[package]
name = "ssh2-config"
version = "0.1.0"
authors = ["Seth Pellegrino <seth@codecopse.net>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["ssh", "ssh_config"]
readme = "README.md"
repository = "https://github.com/sethp/ssh2-config"
homepage = "https://github.com/sethp/ssh2-config"
# documentation = "https://docs.rs/ssh2-config"
description = """
A configuration wrapper for ssh2-rs 
"""

[dependencies]
ssh2 = "0.8.1"
regex = "1"
onig = { path = "../rust-onig/onig", version = "6" }
lazy_static = ""
itertools = "0.9.0"

[dev-dependencies]
tempfile = "3.1.0"
criterion = "0.3.3"

[[bench]]
name = "option"
harness = false

[[bench]]
name = "basic"
harness = false
