[package]
name = "ssh2-config"
version = "0.1.0"
authors = ["Seth Pellegrino <seth@codecopse.net>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["ssh", "ssh_config"]
readme = "README.md"
repository = "https://github.com/sethp/ssh2-config"
homepage = "https://github.com/sethp/ssh2-config"
# documentation = "https://docs.rs/ssh2-config"
description = """
A configuration wrapper for ssh2-rs 
"""

[features]
default = ["with_libc"]

with_libc = ["libc"]

[dependencies]
ssh2 = "0.8.1"
itertools = "0.9.0"
libc = { version = "0.2", optional = true }
glob = "0.3.0"

[dev-dependencies]
tempfile = "3.1.0"
criterion = "0.3.3"
assert_matches = "1.3.0"

[[bench]]
name = "option"
harness = false
